tests/type-reconstruction/ill-typed/functions/functions-4.stella
language core;

extend with #type-reconstruction;

fn main(f : Nat) -> auto {
  return f(f)
}